# mlops_tech_test

./: .gitignore  Makefile  README.md  pyproject.toml  setup.cfg
notebooks/: mlops_tech_test.ipynb
src/: predict.py  train.py
tests/: test_predict.py  test_train.py
